--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -11,26 +11,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/createLinearLayout1"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="5dp"
+            android:background="@color/white"
+            >
+
+        <RelativeLayout
+
+            android:layout_width="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="20dp"
+
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/addsub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
+
                 android:layout_weight="1"
-                android:text="Add Subjects" />
+                android:text="Add Subjects"
+                android:textColor="#0679FF"
+                android:textSize="20dp" />
 
             <TextView
+                android:id="@+id/add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="230dp"
+                android:layout_alignParentRight="true"
                 android:layout_weight="1"
-                android:text="Add" />
-        </LinearLayout>
+                android:text="Add"
+                android:textSize="20dp" />
+        </RelativeLayout>
+        </RelativeLayout>
+
 
         <LinearLayout
             android:id="@+id/createLinearLayout2"
@@ -42,12 +60,16 @@
             android:orientation="vertical">
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:id="@+id/subjectInputLayout"
+            <EditText
+
+                android:id="@+id/subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name of Subject*"
+                android:background="#FEF2F2"
+                android:textSize="20dp"
+                android:paddingVertical="20dp"
+                android:paddingHorizontal="10dp"
                 app:helperText="Required*"
                 app:helperTextTextColor="#D2001A"
                 android:outlineSpotShadowColor="#9C9696"
@@ -55,54 +77,49 @@
                 app:counterMaxLength="20"
                 app:endIconMode="clear_text"
 
-                >
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/subjectEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLength="20"/>
-            </com.google.android.material.textfield.TextInputLayout>
+                />
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:id="@+id/codeInputLayout"
+
+            <EditText
+                android:layout_marginVertical="20dp"
+                android:id="@+id/code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Subject Code*"
+                android:background="#FEF2F2"
+                android:textSize="20dp"
+                android:paddingVertical="20dp"
+                android:paddingHorizontal="10dp"
                 app:helperText="Required*"
                 app:helperTextTextColor="#D2001A"
                 android:outlineSpotShadowColor="#9C9696"
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
                 app:endIconMode="clear_text"
-                >
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/codeEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLength="20"/>
-            </com.google.android.material.textfield.TextInputLayout>
+
+                />
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:id="@+id/teacherInputLayout"
+
+            <EditText
+
+                android:id="@+id/teacher"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Teacher*"
-                app:helperText="Optional*"
+                android:hint="teacher*"
+                android:background="#FEF2F2"
+                android:textSize="20dp"
+                android:paddingVertical="20dp"
+                android:paddingHorizontal="10dp"
+                app:helperText="Required*"
                 app:helperTextTextColor="#D2001A"
                 android:outlineSpotShadowColor="#9C9696"
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
                 app:endIconMode="clear_text"
-                >
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/teacherEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLength="20"/>
-            </com.google.android.material.textfield.TextInputLayout>
+
+                />
+
 
         </LinearLayout>
 
@@ -110,10 +127,11 @@
             android:id="@+id/scheduleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Schedule:"
-            android:textColor="#3AB0FF"
+            android:layout_below="@+id/createLinearLayout2"
             android:layout_marginStart="20dp"
-            android:layout_below="@+id/createLinearLayout2"/>
+            android:text="Schedule:"
+            android:textColor="#0679FF"
+            android:textSize="18dp" />
 
         <LinearLayout
             android:id="@+id/createLinearLayout3"
@@ -181,6 +199,19 @@
                     android:inputType="none"
                     />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/Addday"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/createLinearLayout2"
+                android:layout_marginStart="20dp"
+                android:text="Add Another Day"
+                android:layout_marginVertical="10dp"
+                android:textColor="#0679FF"
+                android:textSize="20dp" />
+
 
         </LinearLayout>
 
