--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -10,13 +10,13 @@
         android:id="@+id/homepageRelativelayout1"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:background="@drawable/radius"
-        >
+        android:background="@drawable/radius">
 
         <ImageView
             android:id="@+id/studImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="30dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/stud" />
 
@@ -24,23 +24,25 @@
             android:id="@+id/studText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="70dp"
-            android:text="an app that help students to be productive by providing time management tools and resources."
-            android:textColor="@color/white"
-            android:textSize="20dp"
+            android:layout_below="@+id/studImage"
             android:layout_centerHorizontal="true"
-            android:justificationMode="inter_word"
-            android:layout_below="@+id/studImage"/>
+            android:fontFamily="@font/poppinsbold"
+            android:text="an app that help students to be productive by providing time management tools and resources."
+            android:textAlignment="center"
+            android:layout_marginHorizontal="30dp"
+            android:textColor="#f4f4f4"
+            android:textSize="20dp" />
 
         <ImageView
             android:id="@+id/fireteraImage"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:layout_below="@+id/studText"
-            android:src="@drawable/firetera"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/firetera" />
 
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/homepageRelativelayout2"
         android:layout_width="match_parent"
@@ -51,13 +53,13 @@
             android:id="@+id/getStartedBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="120dp"
             android:paddingHorizontal="80dp"
             android:paddingVertical="20dp"
             android:text="GET STARTED"
             android:textSize="19dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="120dp"
-            app:cornerRadius="100dp"/>
+            app:cornerRadius="100dp" />
     </RelativeLayout>
 
 
