--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <RelativeLayout
             android:id="@+id/createLinearLayout1"
             android:layout_width="wrap_content"
@@ -66,7 +67,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name of Subject*"
-                android:background="#FEF2F2"
                 android:textSize="20dp"
                 android:paddingVertical="20dp"
                 android:paddingHorizontal="10dp"
@@ -76,6 +76,7 @@
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
                 app:endIconMode="clear_text"
+                android:background="@drawable/edit_text_border"
 
                 />
 
@@ -86,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Subject Code*"
-                android:background="#FEF2F2"
+                android:background="@drawable/edit_text_border"
                 android:textSize="20dp"
                 android:paddingVertical="20dp"
                 android:paddingHorizontal="10dp"
@@ -107,7 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="teacher*"
-                android:background="#FEF2F2"
+                android:background="@drawable/edit_text_border"
                 android:textSize="20dp"
                 android:paddingVertical="20dp"
                 android:paddingHorizontal="10dp"
@@ -119,8 +120,6 @@
                 app:endIconMode="clear_text"
 
                 />
-
-
         </LinearLayout>
 
         <TextView
@@ -140,16 +139,15 @@
             android:layout_below="@+id/createLinearLayout2"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="30dp"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/typeInput"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:hint="@string/type"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
 
                 >
 
@@ -157,18 +155,17 @@
                     android:id="@+id/auto_complete_txt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
-                    />
+                    android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/dayInput"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/day"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
 
                 >
 
@@ -176,19 +173,18 @@
                     android:id="@+id/auto_complete_txt1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
-                    />
+                    android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/timeInput"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/hours"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
 
                 >
 
@@ -196,8 +192,7 @@
                     android:id="@+id/auto_complete_txt2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
-                    />
+                    android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
