--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="end"
+    android:padding="10dp"
     android:maxLines="1"
     android:textAppearance="?attr/textAppearanceSubtitle1"
     >
